<resources>
    <string name="app_name">Flowy</string>
    <string name="settings">설정</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="complete">완료</string>
    <string name="FlowyVersion">Flowy 1.0.15</string>


    <string name="textClear"> </string>

    <!-- 안드로이드 배너 광고   -->
    <string name="admob_app_id">ca-app-pub-4486527307121569~3519092974</string>
    <string name="banner_ad_unit_id">ca-app-pub-4486527307121569/9110508610</string>

    <!-- 배너 광고 테스트   -->
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <!-- flowy 메뉴 글자 -->
    <string name="menu_theme_text">테마</string>
    <string name="menu_contrast_text">대비</string>
    <string name="menu_tutorial_text">자습서</string>
    <string name="menu_info_text">정보</string>

    <string name="init_back_up_text">기본값으로 복원</string>
    <string name="menu_contrast_default_color_text">흑/백</string>

    <string name="inquire_text">Flowy 문의하기</string>
    <string name="share_text">Flowy 공유하기</string>
    <string name="evaluate_text">Flowy 평가하기</string>
    <string name="opensource_text">OpenSource License</string>

    <string name="new_message">새로운 메시지</string>
    <string name="email_hint">이메일을 입력하세요</string>
    <string name="receiver_person_text">받는 사람 :</string>
    <string name="send_person_text">보내는 사람 :</string>
    <string name="overflow_email">info@atoverflow.com</string>
    <string name="title">제목</string>
    <string name="title_hint">제목을 입력하세요</string>
    <string name="content">내용</string>
    <string name="content_hint">내용을 입력하세요</string>

</resources>