<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:text="@string/menu_info_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 문의하기   -->
    <Button
        android:id="@+id/inquireBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/flowy_menu_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/inquire_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <!-- 공유하기  - 출시하고 FragmnetMenu에서 공유기능 패키지명 수정해야함 -->
    <Button
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/flowy_menu_bg"
        android:enabled="false"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/share_text"
        android:textColor="@color/light_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inquireBtn" />

    <!-- 평가하기   -->
    <Button
        android:id="@+id/evaluateBtn"
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/flowy_menu_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/evaluate_text"
        android:textColor="@color/light_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

    <Button
        android:id="@+id/openSourceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="25dp"
        android:background="@color/flowy_menu_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/opensource_text"
        android:textColor="@color/light_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evaluateBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>